<resources>
    <string name="app_name">IPL</string>
    <string name="vs">VS</string>
    <string name="demo_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="home">Home</string>
    <string name="create_league">Create League</string>
    <string name="join_league">Join League</string>
    <string name="my_league">My League</string>
    <string name="logout">Log Out</string>
    <string name="accepted">accepted</string>
    <string name="db_key_accepted">accepted</string>
    <string name="login_with_google">Login with google</string>
    <string name="sample_user_name">Sample User Name</string>
    <string name="enter_league_name">Enter league name</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="league_name">League name</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="submit">Submit</string>
    <string name="created">Created</string>
    <string name="joined">joined</string>
    <string name="join">Join</string>
    <string name="no_data_found">No Data Found</string>
    <string name="match">Match</string>
    <string name="please_wait">Please wait</string>
    <string name="league_name_exist_alert">League name already in use</string>
    <string name="enter_league_name_alert">Please enter your league name</string>
</resources>
